# rust_games_proto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  constants.rs  ext.rs  macros.rs  main.rs  tree.rs
src/boards/: chessboard.rs  cursor.rs  idx_coord.rs  is_in_board.rs  mod.rs  noop_board.rs  single_char_board_converter.rs
src/chess/: controller.rs  game_types.rs  mod.rs  renderer.rs  rules.rs
src/draughts/: ai.rs  controller.rs  mod.rs  moves.rs  renderer.rs
src/draughts/rules/: common.rs  flying_kings_both_direction_jumping.rs  mod.rs  no_flying_kings_single_direction_men.rs
src/graphics_testing/: colors.rs  letters.rs  mod.rs
src/mancala/: ai.rs  board.rs  controller.rs  mod.rs  render.rs
src/menu/: controller.rs  menu_items.rs  mod.rs  renderer.rs
src/orderchaos/: ai.rs  controller.rs  mod.rs  render_mode_selection.rs  renderer.rs
src/senet/: ai.rs  controller.rs  mod.rs  renderer.rs  rules.rs
src/system/: find_nearest.rs  game_system.rs  ggez_ext.rs  letter_mesh.rs  math.rs  mesh_helper.rs  mod.rs  neighbours.rs
src/tablut/: ai.rs  controller.rs  mod.rs  render_mode_selection.rs  renderer.rs  rules.rs
src/tictactoe/: ai.rs  controller.rs  mod.rs  renderer.rs
